[project]
name = "pyweb"
version = "0.0.1"
description = "Create websites with only python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "uvicorn>=0.24.0.post1",
    "falcon>=3.1.1",
    "websockets>=12.0"
]
